--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     </div>    
     <div id="content">    
         <div class="content_row">
-            <div class="colorWrapper" id="rgb">
+            <div class="colorWrapper rgbdata" id="rgb">
                 <span>RGB</span>
                 <p id="rgb_data">something....</p>
             </div>
-            <div class="colorWrapper" id="cmky">
+            <div class="colorWrapper cmykdata" id="cmky">
                 <span>CMYK</span>
                 <p id="cmyk_data">something.....</p>
             </div>
         </div>
         <div class="content_row">
-            <div class="colorWrapper" id="working_rgb">
+            <div class="colorWrapper rgbdata" id="working_rgb">
                 <span>作業用 RGB</span>
                 <p id="working_rgb_data">something....</p>
             </div>
-            <div class="colorWrapper" id="working_cmky">
+            <div class="colorWrapper cmykdata" id="working_cmky">
                 <span>作業用 CMYK</span>
                 <p id="working_cmyk_data">something.....</p>
             </div>
